Thu May 20 20:30:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSUserDefaults.m: Don't load defaults unless we need to.
	* Source/include/NSUserDefaults.h: Keep modification timestamp.

Thu May 20 10:50:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSeq.h:  Add support for comparison and search.
	* Source/NSString.m:  Use comparison and search functions from GSeq.h
	* Source/NSGString.m:  Use comparison and search functions from GSeq.h
	* Source/NSGCString.m:  Use comparison and search functions from GSeq.h
	* Source/Makefile.postamble: Make all string files depend on GSeq.h
	* Source/NSRunLoop.m: Don't retain receiver of runloop watcher.

Wed May 19 21:25:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/GSeq.h:  New file to replace NSGSequence stuff
	* Source/NSString.m:  Rewrite all methods using sequences.
	* Source/NSGString.m:  Remove reference to NSGSequence.
	* Source/include/NSString.h:  Remove unused method (_normalize).
	* Source/NSGSequence.m:  Removed
	* Source/include/NSGSequence.h:  Removed

Tue May 18  9:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/NSRunLoop.m:  ([-acceptInputForMode:beforeDate:]) check that
	run loop watcher objects exist in map before trying to use them.

Fri May 14 20:00:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Tools/pldes.m: new tool to deserialise serialised property lists.
	* Tools/plser.m: new tool to serialise text property lists.
	* Tools/GNUmakefile: add pldes and plser

Mon May 11  15:00:00 1999  Manuel Guesdon <mguesdon@sbuilders.com>

        * Source/NSArray.m: getObjects: (id*)aBuffer range: (NSRange)aRange
                corrected bug in for: replace c by e
	
Tue May 11 10:40:00 1999  Richard Frith-Macdonald <richard@brainstorm.co.uk>

	* Source/include/preface.h: Attempt to standardise win32 conditional
	compilation by using __WIN32__ throughout.